{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 54,
  "lineage": "763a78ee-9d79-1cd7-cdf2-9b87c01d72a9",
  "resources": [
    {
      "module": "module.Bastion-auto-scaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Applicatiom-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/app/Application-lb-Bastion-host/790d934c3485bb64",
            "arn_suffix": "app/Application-lb-Bastion-host/790d934c3485bb64",
            "dns_name": "Application-lb-Bastion-host-1843222976.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/app/Application-lb-Bastion-host/790d934c3485bb64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Application-lb-Bastion-host",
            "security_groups": [
              "sg-0c94a3d10cf188d87"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0368a687906169f05"
              },
              {
                "subnet_id": "subnet-06b734a866250aca6"
              }
            ],
            "subnets": [
              "subnet-0368a687906169f05",
              "subnet-06b734a866250aca6"
            ],
            "tags": {
              "Name": "Application-lb-Bastion-host"
            },
            "tags_all": {
              "Name": "Application-lb-Bastion-host"
            },
            "vpc_id": "vpc-063ae1e7c34f87809",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.security-group-bastion.aws_security_group.Allow-http",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion-auto-scaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Network-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-Bastion-host/5e26e48bcfc453f6",
            "arn_suffix": "net/Netowrk-lb-Bastion-host/5e26e48bcfc453f6",
            "dns_name": "Netowrk-lb-Bastion-host-5e26e48bcfc453f6.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-Bastion-host/5e26e48bcfc453f6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Netowrk-lb-Bastion-host",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0368a687906169f05"
              },
              {
                "subnet_id": "subnet-06b734a866250aca6"
              }
            ],
            "subnets": [
              "subnet-0368a687906169f05",
              "subnet-06b734a866250aca6"
            ],
            "tags": {
              "Name": "Network-lb-Bastion-host"
            },
            "tags_all": {
              "Name": "Network-lb-Bastion-host"
            },
            "vpc_id": "vpc-063ae1e7c34f87809",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion-auto-scaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.Bastion-auto-scaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssh-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:listener/net/Netowrk-lb-Bastion-host/5e26e48bcfc453f6/cdd3c3d9a2f85d64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-Bastion-host-network/f6873da31fc3c8ac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:listener/net/Netowrk-lb-Bastion-host/5e26e48bcfc453f6/cdd3c3d9a2f85d64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-Bastion-host/5e26e48bcfc453f6",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Bastion-auto-scaling.aws_lb.Network-loadbalancer",
            "module.Bastion-auto-scaling.aws_lb_target_group.lb-target-group-network",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion-auto-scaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-group-Bastion-host/4c31a3a79d16e188",
            "arn_suffix": "targetgroup/lb-target-group-Bastion-host/4c31a3a79d16e188",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-group-Bastion-host/4c31a3a79d16e188",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-group-Bastion-host",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Bastion-auto-scaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-Bastion-host-network/f6873da31fc3c8ac",
            "arn_suffix": "targetgroup/lb-target-Bastion-host-network/f6873da31fc3c8ac",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-Bastion-host-network/f6873da31fc3c8ac",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-Bastion-host-network",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.auto-scaling-backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Applicatiom-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/app/Application-lb-backend/9c55cebad55365d5",
            "arn_suffix": "app/Application-lb-backend/9c55cebad55365d5",
            "dns_name": "internal-Application-lb-backend-1687756916.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/app/Application-lb-backend/9c55cebad55365d5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Application-lb-backend",
            "security_groups": [
              "sg-0321dbf05dcb51cbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-088fce516325079b3"
              },
              {
                "subnet_id": "subnet-0ef507217fb19f8c5"
              }
            ],
            "subnets": [
              "subnet-088fce516325079b3",
              "subnet-0ef507217fb19f8c5"
            ],
            "tags": {
              "Name": "Application-lb-backend"
            },
            "tags_all": {
              "Name": "Application-lb-backend"
            },
            "vpc_id": "vpc-063ae1e7c34f87809",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.security-group-bastion.aws_security_group.Allow-http-ssh",
            "module.security-group-frontend.aws_security_group.Allow-http",
            "module.security-group-frontend.aws_security_group.Allow-http-ssh",
            "module.vpc_2n2.aws_subnet.privateSubnets",
            "module.vpc_2n2.aws_vpc.Main",
            "module.security-group-backend.aws_security_group.Allow-http",
            "module.security-group-bastion.aws_security_group.Allow-http"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling-backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Network-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-backend/a1a07682dee07eb1",
            "arn_suffix": "net/Netowrk-lb-backend/a1a07682dee07eb1",
            "dns_name": "Netowrk-lb-backend-a1a07682dee07eb1.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-backend/a1a07682dee07eb1",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Netowrk-lb-backend",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-088fce516325079b3"
              },
              {
                "subnet_id": "subnet-0ef507217fb19f8c5"
              }
            ],
            "subnets": [
              "subnet-088fce516325079b3",
              "subnet-0ef507217fb19f8c5"
            ],
            "tags": {
              "Name": "Network-lb-backend"
            },
            "tags_all": {
              "Name": "Network-lb-backend"
            },
            "vpc_id": "vpc-063ae1e7c34f87809",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc_2n2.aws_subnet.privateSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling-backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.auto-scaling-backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssh-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:listener/net/Netowrk-lb-backend/a1a07682dee07eb1/ee15307fd11ed24c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-backend-network/3bc6d1a52c6d88e2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:listener/net/Netowrk-lb-backend/a1a07682dee07eb1/ee15307fd11ed24c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-backend/a1a07682dee07eb1",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling-backend.aws_lb.Network-loadbalancer",
            "module.auto-scaling-backend.aws_lb_target_group.lb-target-group-network",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling-backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-group-backend/e6f2f55bed884de9",
            "arn_suffix": "targetgroup/lb-target-group-backend/e6f2f55bed884de9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-group-backend/e6f2f55bed884de9",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-group-backend",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.auto-scaling-backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-backend-network/3bc6d1a52c6d88e2",
            "arn_suffix": "targetgroup/lb-target-backend-network/3bc6d1a52c6d88e2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-backend-network/3bc6d1a52c6d88e2",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-backend-network",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.auto-scaling-frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Applicatiom-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/app/Application-lb-frontend/839580bc2637e517",
            "arn_suffix": "app/Application-lb-frontend/839580bc2637e517",
            "dns_name": "Application-lb-frontend-579154352.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/app/Application-lb-frontend/839580bc2637e517",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Application-lb-frontend",
            "security_groups": [
              "sg-08e92fe86d3b026cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0368a687906169f05"
              },
              {
                "subnet_id": "subnet-06b734a866250aca6"
              }
            ],
            "subnets": [
              "subnet-0368a687906169f05",
              "subnet-06b734a866250aca6"
            ],
            "tags": {
              "Name": "Application-lb-frontend"
            },
            "tags_all": {
              "Name": "Application-lb-frontend"
            },
            "vpc_id": "vpc-063ae1e7c34f87809",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.security-group-frontend.aws_security_group.Allow-http",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling-frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Network-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-frontend/32235abbd4ea4767",
            "arn_suffix": "net/Netowrk-lb-frontend/32235abbd4ea4767",
            "dns_name": "Netowrk-lb-frontend-32235abbd4ea4767.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-frontend/32235abbd4ea4767",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Netowrk-lb-frontend",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0368a687906169f05"
              },
              {
                "subnet_id": "subnet-06b734a866250aca6"
              }
            ],
            "subnets": [
              "subnet-0368a687906169f05",
              "subnet-06b734a866250aca6"
            ],
            "tags": {
              "Name": "Network-lb-frontend"
            },
            "tags_all": {
              "Name": "Network-lb-frontend"
            },
            "vpc_id": "vpc-063ae1e7c34f87809",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling-frontend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.auto-scaling-frontend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssh-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:listener/net/Netowrk-lb-frontend/32235abbd4ea4767/8bc74026c900bb79",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-frontend-network/3c9c086c48630e3d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:listener/net/Netowrk-lb-frontend/32235abbd4ea4767/8bc74026c900bb79",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:loadbalancer/net/Netowrk-lb-frontend/32235abbd4ea4767",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling-frontend.aws_lb.Network-loadbalancer",
            "module.auto-scaling-frontend.aws_lb_target_group.lb-target-group-network",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling-frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-group-frontend/a111d7803c4dd064",
            "arn_suffix": "targetgroup/lb-target-group-frontend/a111d7803c4dd064",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-group-frontend/a111d7803c4dd064",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-group-frontend",
            "port": 3000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.auto-scaling-frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-frontend-network/3c9c086c48630e3d",
            "arn_suffix": "targetgroup/lb-target-frontend-network/3c9c086c48630e3d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:943529970146:targetgroup/lb-target-frontend-network/3c9c086c48630e3d",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-frontend-network",
            "port": 3000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:security-group/sg-0321dbf05dcb51cbb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0321dbf05dcb51cbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App access through http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Backend-LB",
            "name_prefix": "",
            "owner_id": "943529970146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-frontend.aws_security_group.Allow-http",
            "module.security-group-frontend.aws_security_group.Allow-http-ssh",
            "module.vpc_2n2.aws_vpc.Main",
            "module.security-group-bastion.aws_security_group.Allow-http",
            "module.security-group-bastion.aws_security_group.Allow-http-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-http-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:security-group/sg-065851171b8c53afc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065851171b8c53afc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NestJS app port access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00671ba70b58a4ea2"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH port access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9f7e4ae04cebfb7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Backend-AS",
            "name_prefix": "",
            "owner_id": "943529970146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-bastion.aws_security_group.Allow-http",
            "module.security-group-bastion.aws_security_group.Allow-http-ssh",
            "module.security-group-frontend.aws_security_group.Allow-http",
            "module.security-group-frontend.aws_security_group.Allow-http-ssh",
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:security-group/sg-0c94a3d10cf188d87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c94a3d10cf188d87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App access through http",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-LB",
            "name_prefix": "",
            "owner_id": "943529970146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-http-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:security-group/sg-0f9f7e4ae04cebfb7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9f7e4ae04cebfb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion host access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-AS",
            "name_prefix": "",
            "owner_id": "943529970146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:security-group/sg-08e92fe86d3b026cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e92fe86d3b026cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App access through http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Frontend-LB",
            "name_prefix": "",
            "owner_id": "943529970146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group-frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-http-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:security-group/sg-00671ba70b58a4ea2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00671ba70b58a4ea2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "React app port access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Frontend-AS",
            "name_prefix": "",
            "owner_id": "943529970146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04e25727c663c1e0a",
            "domain": "vpc",
            "id": "eipalloc-01212cd46f8306c65",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05b7e57952619b9b5",
            "private_dns": "ip-10-0-0-211.us-east-2.compute.internal",
            "private_ip": "10.0.0.211",
            "public_dns": "ec2-3-21-160-45.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.160.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:internet-gateway/igw-012a97940f3890897",
            "id": "igw-012a97940f3890897",
            "owner_id": "943529970146",
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01212cd46f8306c65",
            "connectivity_type": "public",
            "id": "nat-0c45d182de14eddf4",
            "network_interface_id": "eni-05b7e57952619b9b5",
            "private_ip": "10.0.0.211",
            "public_ip": "3.21.160.45",
            "subnet_id": "subnet-0368a687906169f05"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main",
            "module.vpc_2n2.aws_eip.nateIP",
            "module.vpc_2n2.aws_subnet.publicSubnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRTs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:route-table/rtb-04b3c9290fa5d2fbc",
            "id": "rtb-04b3c9290fa5d2fbc",
            "owner_id": "943529970146",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c45d182de14eddf4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRT0"
            },
            "tags_all": {
              "Name": "PrivateRT0"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_eip.nateIP",
            "module.vpc_2n2.aws_nat_gateway.NATgw",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:route-table/rtb-0ef3ff78d3e48ce8f",
            "id": "rtb-0ef3ff78d3e48ce8f",
            "owner_id": "943529970146",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c45d182de14eddf4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRT1"
            },
            "tags_all": {
              "Name": "PrivateRT1"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_eip.nateIP",
            "module.vpc_2n2.aws_nat_gateway.NATgw",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRTs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:route-table/rtb-0dd878f3920e003bf",
            "id": "rtb-0dd878f3920e003bf",
            "owner_id": "943529970146",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012a97940f3890897",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT0"
            },
            "tags_all": {
              "Name": "PublicRT0"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_internet_gateway.IGW",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:route-table/rtb-0a7ee76be923a95b0",
            "id": "rtb-0a7ee76be923a95b0",
            "owner_id": "943529970146",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012a97940f3890897",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT1"
            },
            "tags_all": {
              "Name": "PublicRT1"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_2n2.aws_internet_gateway.IGW",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aab520265911484b",
            "route_table_id": "rtb-04b3c9290fa5d2fbc",
            "subnet_id": "subnet-088fce516325079b3"
          },
          "dependencies": [
            "module.vpc_2n2.aws_eip.nateIP",
            "module.vpc_2n2.aws_nat_gateway.NATgw",
            "module.vpc_2n2.aws_route_table.PrivateRTs",
            "module.vpc_2n2.aws_subnet.privateSubnets",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b15d9e8075f07da",
            "route_table_id": "rtb-0ef3ff78d3e48ce8f",
            "subnet_id": "subnet-0ef507217fb19f8c5"
          },
          "dependencies": [
            "module.vpc_2n2.aws_eip.nateIP",
            "module.vpc_2n2.aws_nat_gateway.NATgw",
            "module.vpc_2n2.aws_route_table.PrivateRTs",
            "module.vpc_2n2.aws_subnet.privateSubnets",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfa81322e22e7768",
            "route_table_id": "rtb-0dd878f3920e003bf",
            "subnet_id": "subnet-0368a687906169f05"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main",
            "module.vpc_2n2.aws_internet_gateway.IGW",
            "module.vpc_2n2.aws_route_table.PublicRTs",
            "module.vpc_2n2.aws_subnet.publicSubnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0398cdb12c11a7b",
            "route_table_id": "rtb-0a7ee76be923a95b0",
            "subnet_id": "subnet-06b734a866250aca6"
          },
          "dependencies": [
            "module.vpc_2n2.aws_internet_gateway.IGW",
            "module.vpc_2n2.aws_route_table.PublicRTs",
            "module.vpc_2n2.aws_subnet.publicSubnets",
            "module.vpc_2n2.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:subnet/subnet-088fce516325079b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-088fce516325079b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943529970146",
            "tags": {
              "Name": "private0"
            },
            "tags_all": {
              "Name": "private0"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:subnet/subnet-0ef507217fb19f8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ef507217fb19f8c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943529970146",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:subnet/subnet-0368a687906169f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0368a687906169f05",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943529970146",
            "tags": {
              "Name": "public0"
            },
            "tags_all": {
              "Name": "public0"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:subnet/subnet-06b734a866250aca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06b734a866250aca6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943529970146",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-063ae1e7c34f87809"
          },
          "dependencies": [
            "module.vpc_2n2.aws_vpc.Main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_2n2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:943529970146:vpc/vpc-063ae1e7c34f87809",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-0367d8c19bf7c03ec",
            "default_route_table_id": "rtb-0cbfa6119c879261f",
            "default_security_group_id": "sg-0a9f777a4ca8506e7",
            "dhcp_options_id": "dopt-083734904e4bfe521",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-063ae1e7c34f87809",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbfa6119c879261f",
            "owner_id": "943529970146"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}